--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "tokyo-free-black-nextjs-admin-dashboard",
   "version": "1.0.0",
-  "title": "Tokyo Free Black NextJS Typescript Admin Dashboard",
-  "description": "High performance React template built with lots of powerful MUI (Material-UI) components across multiple product niches for fast & perfect apps development processes",
+  "title": "LMS",
+  "description": "Learning Management System",
   "author": {
     "name": "BloomUI.com",
     "url": "https://bloomui.com"
@@ -18,10 +18,17 @@
     "@mui/lab": "5.0.0-alpha.84",
     "@mui/material": "5.8.2",
     "@mui/styles": "5.8.0",
+    "@types/node": "17.0.39",
+    "@types/nprogress": "0.2.0",
+    "@types/numeral": "2.0.2",
+    "@types/react": "17.0.40",
+    "@types/react-dom": "17.0.13",
     "apexcharts": "3.35.3",
+    "axios": "^0.27.2",
     "clsx": "1.1.1",
     "context-api": "0.0.2",
     "date-fns": "2.28.0",
+    "formik": "^2.2.9",
     "next": "12.1.6",
     "next-images": "1.8.4",
     "nprogress": "0.2.0",
@@ -30,12 +37,13 @@
     "react-apexcharts": "1.4.0",
     "react-custom-scrollbars-2": "4.4.0",
     "react-dom": "17.0.2",
-    "@types/node": "17.0.39",
-    "@types/nprogress": "0.2.0",
-    "@types/numeral": "2.0.2",
-    "@types/react": "17.0.40",
-    "@types/react-dom": "17.0.13",
-    "typescript": "4.7.3"
+    "react-helmet": "^6.1.0",
+    "react-helmet-async": "^1.3.0",
+    "react-i18next": "^11.18.3",
+    "react-router-dom": "^6.3.0",
+    "react-toastify": "^9.0.7",
+    "typescript": "4.7.3",
+    "yup": "^0.32.11"
   },
   "scripts": {
     "dev": "next",
