--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "title": "LMS",
   "description": "Learning Management System",
-  "homepage": "https://myapp.com",
+  "homepage": ".",
   "author": {
     "name": "BloomUI.com",
     "url": "https://bloomui.com"
