--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-helmet": "^6.1.0",
     "react-helmet-async": "^1.3.0",
     "react-i18next": "^11.18.3",
+    "react-quill": "^2.0.0",
     "react-router-dom": "^6.3.0",
     "react-toastify": "^9.0.8",
     "typescript": "4.7.3",
