--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "context-api": "0.0.2",
     "date-fns": "2.28.0",
     "formik": "^2.2.9",
+    "jwt-decode": "^3.1.2",
     "next": "12.1.6",
     "next-images": "1.8.4",
     "nprogress": "0.2.0",
