--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "axios": "^0.27.2",
     "clsx": "1.1.1",
     "context-api": "0.0.2",
+    "cookies-next": "^2.1.1",
     "date-fns": "2.28.0",
     "formik": "^2.2.9",
     "jwt-decode": "^3.1.2",
